# Qttask5

./: CMakeLists.txt  Tableview.qml  dialog.cpp  dialog.h  main.cpp  main.qml  qml.qrc  tablemodel.cpp  tablemodel.h
